--- a/starter_code/src/index.html
+++ b/starter_code/src/index.html
@@ -6,7 +6,7 @@
     <title>all movies</title>
 </head>
 <body>
-    <!-- <script src="./data.js"></script> -->
+    <script src="./data.js"></script>
     <script src="./movies.js"></script>
     
 </body>
